Fix popover beneficiary list on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,13 @@
     50% { width: 50%; }
     100% { width: 100%; }
   }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+    scrollbar-width: none; /* For Firefox */
+  }
+  
+  .no-scrollbar::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Opera */
+  }
+  
